--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
         "sass-loader": "^7.1.0",
         "vue-template-compiler": "^2.6.11",
         "yargs": "^4.6.0"
+    },
+    "dependencies": {
+        "bootstrap": "^4.4.1",
+        "vue": "^2.6.11"
     }
 }
