--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue-template-compiler": "^2.6.14"
     },
     "dependencies": {
+        "@alpinejs/morph": "^3.9.0",
         "alpinejs": "^3.9.0",
         "bootstrap": "^5.1.3",
         "vue": "^2.6.14"
