--- a/package.json
+++ b/package.json
@@ -7,20 +7,15 @@
         "prod": "mix --production"
     },
     "devDependencies": {
-        "laravel-mix": "^6.0.39",
-        "laravel-mix-jigsaw": "^1.5.0",
-        "node-sass": "^7.0.1",
-        "postcss": "^8.2.4",
-        "postcss-import": "^14.0.0",
+        "laravel-mix": "^6.0.49",
+        "laravel-mix-jigsaw": "^2.0.0",
         "sass": "^1.49.9",
-        "sass-loader": "^12.6.0",
-        "tailwindcss": "^2.0.2",
-        "vue-template-compiler": "^2.6.14"
+        "sass-embedded": "^1.54.8",
+        "sass-loader": "^13.0.2"
     },
     "dependencies": {
-        "@alpinejs/morph": "^3.9.0",
-        "alpinejs": "^3.9.0",
-        "bootstrap": "^5.1.3",
-        "vue": "^2.6.14"
+        "@alpinejs/morph": "^3.10.3",
+        "alpinejs": "^3.10.3",
+        "bootstrap": "^5.2.0"
     }
 }
